// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack5 plugin common: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.-m-_bl_20px_br_ {
    margin: -20px
}
.m-_bl_20px_br_ {
    margin: 20px
}
.mx-auto {
    margin-left: auto;
    margin-right: auto
}
.-mt-2 {
    margin-top: -0.5rem
}
.mb-_bl_-20px_br_ {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.h-10 {
    height: 2.5rem
}
.h-_bl_100px_br_ {
    height: 100px
}
.h-_bl_200_p__br_ {
    height: 200%
}
.h-_bl_99px_br_ {
    height: 99px
}
.max-h-_bl_100px_br_ {
    max-height: 100px
}
.min-h-_bl_100px_br_ {
    min-height: 100px
}
.w-10 {
    width: 2.5rem
}
.w-32 {
    width: 8rem
}
.w-_bl_100px_br_ {
    width: 100px
}
.w-_bl_20px_br_ {
    width: 20px
}
.w-_bl_300rpx_br_ {
    width: 300rpx
}
.w-_bl_99px_br_ {
    width: 99px
}
.min-w-_bl_300rpx_br_ {
    min-width: 300rpx
}
.max-w-_bl_300rpx_br_ {
    max-width: 300rpx
}
.grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.items-center {
    align-items: center
}
.justify-center {
    justify-content: center
}
.space-y-_bl_1_d_6rem_br_>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.divide-x-_bl_10px_br_>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.divide-solid>view + view {
    border-style: solid
}
.divide-_bl__h_010101_br_>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.rounded-_bl_40px_br_ {
    border-radius: 40px
}
.rounded-md {
    border-radius: 0.375rem
}
.border-0 {
    border-width: 0px
}
.border-_bl_10px_br_ {
    border-width: 10px
}
.border-solid {
    border-style: solid
}
.border-_bl__h_098765_br_ {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.border-opacity-_bl_0_d_44_br_ {
    --tw-border-opacity: 0.44
}
.bg-_bl__h_123456_br_ {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.bg-pink-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.bg-sky-700 {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.bg-opacity-_bl_0_d_54_br_ {
    --tw-bg-opacity: 0.54
}
.bg-_bl_url_pl__q_https_c__s__s_xxx_d_com_s_xx_d_webp_q__qr__br_ {
    background-image: url('https://xxx.com/xx.webp')
}
.bg-_bl_url_pl__q_https_c__s__s_yyy_d_com_s_xx_d_webp_q__qr__br_ {
    background-image: url('https://yyy.com/xx.webp')
}
.p-_bl_20px_br_ {
    padding: 20px
}
.px-4 {
    padding-left: 1rem;
    padding-right: 1rem
}
.py-2 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.text-_bl_20px_br_ {
    font-size: 20px
}
.font-semibold {
    font-weight: 600
}
.leading-_bl_0_d_9_br_ {
    line-height: 0.9
}
.text-_bl__h_dddddd_br_ {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.text-_bl__h_ffffff_br_ {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-black {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-opacity-_bl_0_d_19_br_ {
    --tw-text-opacity: 0.19
}
.ring-4 {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ring-pink-300 {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
@media (min-width: 640px) {
    .sm_c_px-8 {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .sm_c_py-3 {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="container">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered h-_bl_200_p__br_">
    <text>{{powered.by}}</text>
  </view>
  <view class="-mt-2 mb-_bl_-20px_br_ p-_bl_20px_br_">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="space-y-_bl_1_d_6rem_br_">
    <view class="w-_bl_300rpx_br_ text-black text-opacity-_bl_0_d_19_br_">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="max-h-_bl_100px_br_ min-w-_bl_300rpx_br_ text-_bl_20px_br_ leading-_bl_0_d_9_br_">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="min-h-_bl_100px_br_ max-w-_bl_300rpx_br_ text-_bl__h_dddddd_br_">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="flex h-_bl_100px_br_ w-_bl_100px_br_ items-center justify-center rounded-_bl_40px_br_ bg-_bl__h_123456_br_ bg-opacity-_bl_0_d_54_br_ text-_bl__h_ffffff_br_">
      Hello
    </view>
    <view class="border-_bl_10px_br_ border-solid border-_bl__h_098765_br_ border-opacity-_bl_0_d_44_br_">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="grid grid-cols-3 divide-x-_bl_10px_br_ divide-solid divide-_bl__h_010101_br_">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="w-32 rounded-md bg-pink-500 py-2 font-semibold text-white ring-4 ring-pink-300">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-_bl_20px_br_ {{flag=='p-[20px]'?'p-_bl_20px_br_':'m-_bl_20px_br_'}}"></view>
  <button class="bg-sky-700 px-4 py-2 text-white hover_c_bg-sky-800 sm_c_px-8 sm_c_py-3">...</button>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-_bl_20px_br_ {{flag=='p-[20px]'?'p-_bl_20px_br_':'m-_bl_20px_br_'}}"></view>
</view>",
  "wxml.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/(() => {
  // webpackBootstrap
  /******/
  var __webpack_modules__ = {
    /***/"./test/fixtures/webpack/v5/wxml/pages/index.js":
    /*!******************************************************!*\\
      !*** ./test/fixtures/webpack/v5/wxml/pages/index.js ***!
      \\******************************************************/
    /***/
    () => {
      eval("// import './index.wxml'\\n// import './index.css'\\n\\nconst className = \\"w-_bl_100px_br_ h-_bl_100px_br_ \\" + \\"bg-_bl_url_pl__q_https_c__s__s_xxx_d_com_s_xx_d_webp_q__qr__br_\\";\\ndocument.body.append(\`<div class=\\"\${className}\\">className</div>\`);\\nconst el = document.createElement();\\nel.classList.add(\\"w-_bl_99px_br_\\", \`h-_bl_99px_br_\`, \\"bg-_bl_url_pl__q_https_c__s__s_yyy_d_com_s_xx_d_webp_q__qr__br_\\");\\ndocument.body.appendChild(el);\\n\\n//# sourceURL=webpack://weapp-tailwindcss-webpack-plugin/./test/fixtures/webpack/v5/wxml/pages/index.js?");

      /***/
    }

    /******/
  };
  /************************************************************************/
  /******/
  /******/ // startup
  /******/ // Load entry module and return exports
  /******/ // This entry module can't be inlined because the eval devtool is used.
  /******/
  var __webpack_exports__ = {};
  /******/
  __webpack_modules__["./test/fixtures/webpack/v5/wxml/pages/index.js"]();
  /******/
  /******/
})();",
}
`;

exports[`webpack5 plugin common: errors 1`] = `[]`;

exports[`webpack5 plugin common: warnings 1`] = `[]`;

exports[`webpack5 plugin disabled true: assets 1`] = `
{
  "index.css": "*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.-m-\\[20px\\] {
    margin: -20px
}
.m-\\[20px\\] {
    margin: 20px
}
.mx-auto {
    margin-left: auto;
    margin-right: auto
}
.-mt-2 {
    margin-top: -0.5rem
}
.mb-\\[-20px\\] {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.h-10 {
    height: 2.5rem
}
.h-\\[100px\\] {
    height: 100px
}
.h-\\[200\\%\\] {
    height: 200%
}
.h-\\[99px\\] {
    height: 99px
}
.max-h-\\[100px\\] {
    max-height: 100px
}
.min-h-\\[100px\\] {
    min-height: 100px
}
.w-10 {
    width: 2.5rem
}
.w-32 {
    width: 8rem
}
.w-\\[100px\\] {
    width: 100px
}
.w-\\[20px\\] {
    width: 20px
}
.w-\\[300rpx\\] {
    width: 300rpx
}
.w-\\[99px\\] {
    width: 99px
}
.min-w-\\[300rpx\\] {
    min-width: 300rpx
}
.max-w-\\[300rpx\\] {
    max-width: 300rpx
}
.grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.items-center {
    align-items: center
}
.justify-center {
    justify-content: center
}
.space-y-\\[1\\.6rem\\] > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.divide-x-\\[10px\\] > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.divide-solid > :not([hidden]) ~ :not([hidden]) {
    border-style: solid
}
.divide-\\[\\#010101\\] > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.rounded-\\[40px\\] {
    border-radius: 40px
}
.rounded-md {
    border-radius: 0.375rem
}
.border-0 {
    border-width: 0px
}
.border-\\[10px\\] {
    border-width: 10px
}
.border-solid {
    border-style: solid
}
.border-\\[\\#098765\\] {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.border-opacity-\\[0\\.44\\] {
    --tw-border-opacity: 0.44
}
.bg-\\[\\#123456\\] {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.bg-pink-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.bg-sky-700 {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.bg-opacity-\\[0\\.54\\] {
    --tw-bg-opacity: 0.54
}
.bg-\\[url\\(\\'https\\:\\/\\/xxx\\.com\\/xx\\.webp\\'\\)\\] {
    background-image: url('https://xxx.com/xx.webp')
}
.bg-\\[url\\(\\'https\\:\\/\\/yyy\\.com\\/xx\\.webp\\'\\)\\] {
    background-image: url('https://yyy.com/xx.webp')
}
.p-\\[20px\\] {
    padding: 20px
}
.px-4 {
    padding-left: 1rem;
    padding-right: 1rem
}
.py-2 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.text-\\[20px\\] {
    font-size: 20px
}
.font-semibold {
    font-weight: 600
}
.leading-\\[0\\.9\\] {
    line-height: 0.9
}
.text-\\[\\#dddddd\\] {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.text-\\[\\#ffffff\\] {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-black {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-opacity-\\[0\\.19\\] {
    --tw-text-opacity: 0.19
}
.ring-4 {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ring-pink-300 {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
.hover\\:bg-sky-800:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(7 89 133 / var(--tw-bg-opacity))
}
@media (min-width: 640px) {
    .sm\\:px-8 {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .sm\\:py-3 {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="container">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered h-[200%]">
    <text>{{powered.by}}</text>
  </view>
  <view class="-mt-2 mb-[-20px] p-[20px]">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="space-y-[1.6rem]">
    <view class="w-[300rpx] text-black text-opacity-[0.19]">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="max-h-[100px] min-w-[300rpx] text-[20px] leading-[0.9]">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="min-h-[100px] max-w-[300rpx] text-[#dddddd]">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="flex h-[100px] w-[100px] items-center justify-center rounded-[40px] bg-[#123456] bg-opacity-[0.54] text-[#ffffff]">
      Hello
    </view>
    <view class="border-[10px] border-solid border-[#098765] border-opacity-[0.44]">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="grid grid-cols-3 divide-x-[10px] divide-solid divide-[#010101]">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="w-32 rounded-md bg-pink-500 py-2 font-semibold text-white ring-4 ring-pink-300">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-[20px] {{flag=='p-[20px]'?'p-[20px]':'m-[20px]'}}"></view>
  <button class="bg-sky-700 px-4 py-2 text-white hover:bg-sky-800 sm:px-8 sm:py-3">...</button>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'? 'icon-home-selected' : 'icon-home'}} {{b}} {{ a==='cc' }} w-[20px] {{flag=='p-[20px]'? 'p-[20px]' : 'm-[20px]'}}"></view>
</view>",
  "wxml.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/ (() => { // webpackBootstrap
/******/ 	var __webpack_modules__ = ({

/***/ "./test/fixtures/webpack/v5/wxml/pages/index.js":
/*!******************************************************!*\\
  !*** ./test/fixtures/webpack/v5/wxml/pages/index.js ***!
  \\******************************************************/
/***/ (() => {

eval("// import './index.wxml'\\n// import './index.css'\\n\\nconst className = 'w-[100px] h-[100px] ' + \\"bg-[url('https://xxx.com/xx.webp')]\\"\\n\\ndocument.body.append(\`<div class=\\"\${className}\\">className</div>\`)\\n\\nconst el = document.createElement()\\n\\nel.classList.add('w-[99px]', \`h-[99px]\`, \\"bg-[url('https://yyy.com/xx.webp')]\\")\\n\\ndocument.body.appendChild(el)\\n\\n//# sourceURL=webpack://weapp-tailwindcss-webpack-plugin/./test/fixtures/webpack/v5/wxml/pages/index.js?");

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	
/******/ 	// startup
/******/ 	// Load entry module and return exports
/******/ 	// This entry module can't be inlined because the eval devtool is used.
/******/ 	var __webpack_exports__ = {};
/******/ 	__webpack_modules__["./test/fixtures/webpack/v5/wxml/pages/index.js"]();
/******/ 	
/******/ })()
;",
}
`;

exports[`webpack5 plugin disabled true: errors 1`] = `[]`;

exports[`webpack5 plugin disabled true: warnings 1`] = `[]`;

exports[`webpack5 plugin empty build: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}",
  "index.wxml": "<view>e</view>",
  "wxml.js": "console.log("i'am empty !");",
}
`;

exports[`webpack5 plugin empty build: errors 1`] = `[]`;

exports[`webpack5 plugin empty build: warnings 1`] = `[]`;

exports[`webpack5 plugin hijack custom loader: assets 1`] = `
{
  "index.js": "console.log(0),console.log(1),console.log(2);",
}
`;

exports[`webpack5 plugin hijack custom loader: errors 1`] = `[]`;

exports[`webpack5 plugin hijack custom loader: warnings 1`] = `[]`;

exports[`webpack5 plugin mangle options mangleClassFilter all true: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.som-fb {
    margin: -20px
}
.som-va {
    margin: 20px
}
.som-ta {
    margin-left: auto;
    margin-right: auto
}
.som-c {
    margin-top: -0.5rem
}
.som-d {
    margin-bottom: -20px
}
.som-q {
    display: flex
}
.som-da {
    display: grid
}
.som-ra {
    height: 2.5rem
}
.som-r {
    height: 100px
}
.som-b {
    height: 200%
}
.som-db {
    height: 99px
}
.som-j {
    max-height: 100px
}
.som-n {
    min-height: 100px
}
.som-sa {
    width: 2.5rem
}
.som-ia {
    width: 8rem
}
.som-s {
    width: 100px
}
.som-ua {
    width: 20px
}
.som-g {
    width: 300rpx
}
.som-cb {
    width: 99px
}
.som-k {
    min-width: 300rpx
}
.som-o {
    max-width: 300rpx
}
.som-ea {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.som-t {
    align-items: center
}
.som-u {
    justify-content: center
}
.som-f>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.som-fa>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.som-ga>view + view {
    border-style: solid
}
.som-ha>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.som-v {
    border-radius: 40px
}
.som-ja {
    border-radius: 0.375rem
}
.som-qa {
    border-width: 0px
}
.som-z {
    border-width: 10px
}
.som-aa {
    border-style: solid
}
.som-ba {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.som-ca {
    --tw-border-opacity: 0.44
}
.som-w {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.som-ka {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.som-wa {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.som-x {
    --tw-bg-opacity: 0.54
}
.som-bb {
    background-image: url('https://xxx.com/xx.webp')
}
.som-eb {
    background-image: url('https://yyy.com/xx.webp')
}
.som-e {
    padding: 20px
}
.som-xa {
    padding-left: 1rem;
    padding-right: 1rem
}
.som-la {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.som-l {
    font-size: 20px
}
.som-ma {
    font-weight: 600
}
.som-m {
    line-height: 0.9
}
.som-p {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.som-y {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.som-h {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.som-na {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.som-i {
    --tw-text-opacity: 0.19
}
.som-oa {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.som-pa {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
@media (min-width: 640px) {
    .som-za {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .som-ab {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="som-a">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered som-b">
    <text>{{powered.by}}</text>
  </view>
  <view class="som-c som-d som-e">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="som-f">
    <view class="som-g som-h som-i">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="som-j som-k som-l som-m">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="som-n som-o som-p">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="som-q som-r som-s som-t som-u som-v som-w som-x som-y">
      Hello
    </view>
    <view class="som-z som-aa som-ba som-ca">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="som-da som-da-cols-3 som-fa som-ga som-ha">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="som-ia som-ja som-ka som-la som-ma som-na som-oa som-pa">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="som-qa icon som-ra som-sa som-ta {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} som-ua {{flag=='p-[20px]'?'som-e':'som-va'}}"></view>
  <button class="som-wa som-xa som-la som-na som-ya som-za som-ab">...</button>
  <view class="som-qa icon som-ra som-sa som-ta {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} som-ua {{flag=='p-[20px]'?'som-e':'som-va'}}"></view>
</view>",
  "wxml.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/(() => {
  // webpackBootstrap
  /******/
  var __webpack_modules__ = {
    /***/"./test/fixtures/webpack/v5/wxml/pages/index.js":
    /*!******************************************************!*\\
      !*** ./test/fixtures/webpack/v5/wxml/pages/index.js ***!
      \\******************************************************/
    /***/
    () => {
      eval("// import './index.wxml'\\n// import './index.css'\\n\\nconst className = \\"som-s som-r \\" + \\"som-bb\\";\\ndocument.body.append(\`<div class=\\"\${className}\\">className</div>\`);\\nconst el = document.createElement();\\nel.classList.add(\\"som-cb\\", \`som-db\`, \\"som-eb\\");\\ndocument.body.appendChild(el);\\n\\n//# sourceURL=webpack://weapp-tailwindcss-webpack-plugin/./test/fixtures/webpack/v5/wxml/pages/index.js?");

      /***/
    }

    /******/
  };
  /************************************************************************/
  /******/
  /******/ // startup
  /******/ // Load entry module and return exports
  /******/ // This entry module can't be inlined because the eval devtool is used.
  /******/
  var __webpack_exports__ = {};
  /******/
  __webpack_modules__["./test/fixtures/webpack/v5/wxml/pages/index.js"]();
  /******/
  /******/
})();",
}
`;

exports[`webpack5 plugin mangle options mangleClassFilter all true: errors 1`] = `[]`;

exports[`webpack5 plugin mangle options mangleClassFilter all true: warnings 1`] = `[]`;

exports[`webpack5 plugin mangle options with default mangleClassFilter: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.ice-cb {
    margin: -20px
}
.ice-sa {
    margin: 20px
}
.ice-qa {
    margin-left: auto;
    margin-right: auto
}
.ice-b {
    margin-top: -0.5rem
}
.ice-c {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.ice-oa {
    height: 2.5rem
}
.ice-p {
    height: 100px
}
.ice-a {
    height: 200%
}
.ice-ab {
    height: 99px
}
.ice-i {
    max-height: 100px
}
.ice-m {
    min-height: 100px
}
.ice-pa {
    width: 2.5rem
}
.ice-fa {
    width: 8rem
}
.ice-q {
    width: 100px
}
.ice-ra {
    width: 20px
}
.ice-f {
    width: 300rpx
}
.ice-za {
    width: 99px
}
.ice-j {
    min-width: 300rpx
}
.ice-n {
    max-width: 300rpx
}
.ice-ba {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.ice-r {
    align-items: center
}
.ice-s {
    justify-content: center
}
.ice-e>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.ice-ca>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.ice-da>view + view {
    border-style: solid
}
.ice-ea>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.ice-t {
    border-radius: 40px
}
.ice-ga {
    border-radius: 0.375rem
}
.ice-na {
    border-width: 0px
}
.ice-x {
    border-width: 10px
}
.ice-y {
    border-style: solid
}
.ice-z {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.ice-aa {
    --tw-border-opacity: 0.44
}
.ice-u {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.ice-ha {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.ice-ta {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.ice-v {
    --tw-bg-opacity: 0.54
}
.ice-ya {
    background-image: url('https://xxx.com/xx.webp')
}
.ice-bb {
    background-image: url('https://yyy.com/xx.webp')
}
.ice-d {
    padding: 20px
}
.ice-ua {
    padding-left: 1rem;
    padding-right: 1rem
}
.ice-ia {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.ice-k {
    font-size: 20px
}
.ice-ja {
    font-weight: 600
}
.ice-l {
    line-height: 0.9
}
.ice-o {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.ice-w {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.ice-g {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.ice-ka {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.ice-h {
    --tw-text-opacity: 0.19
}
.ice-la {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ice-ma {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
@media (min-width: 640px) {
    .ice-wa {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .ice-xa {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="container">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered ice-a">
    <text>{{powered.by}}</text>
  </view>
  <view class="ice-b ice-c ice-d">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="ice-e">
    <view class="ice-f ice-g ice-h">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="ice-i ice-j ice-k ice-l">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="ice-m ice-n ice-o">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="flex ice-p ice-q ice-r ice-s ice-t ice-u ice-v ice-w">
      Hello
    </view>
    <view class="ice-x ice-y ice-z ice-aa">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="grid ice-ba ice-ca ice-da ice-ea">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="ice-fa ice-ga ice-ha ice-ia ice-ja ice-ka ice-la ice-ma">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="ice-na icon ice-oa ice-pa ice-qa {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} ice-ra {{flag=='p-[20px]'?'ice-d':'ice-sa'}}"></view>
  <button class="ice-ta ice-ua ice-ia ice-ka ice-va ice-wa ice-xa">...</button>
  <view class="ice-na icon ice-oa ice-pa ice-qa {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} ice-ra {{flag=='p-[20px]'?'ice-d':'ice-sa'}}"></view>
</view>",
  "wxml.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/(() => {
  // webpackBootstrap
  /******/
  var __webpack_modules__ = {
    /***/"./test/fixtures/webpack/v5/wxml/pages/index.js":
    /*!******************************************************!*\\
      !*** ./test/fixtures/webpack/v5/wxml/pages/index.js ***!
      \\******************************************************/
    /***/
    () => {
      eval("// import './index.wxml'\\n// import './index.css'\\n\\nconst className = \\"ice-q ice-p \\" + \\"ice-ya\\";\\ndocument.body.append(\`<div class=\\"\${className}\\">className</div>\`);\\nconst el = document.createElement();\\nel.classList.add(\\"ice-za\\", \`ice-ab\`, \\"ice-bb\\");\\ndocument.body.appendChild(el);\\n\\n//# sourceURL=webpack://weapp-tailwindcss-webpack-plugin/./test/fixtures/webpack/v5/wxml/pages/index.js?");

      /***/
    }

    /******/
  };
  /************************************************************************/
  /******/
  /******/ // startup
  /******/ // Load entry module and return exports
  /******/ // This entry module can't be inlined because the eval devtool is used.
  /******/
  var __webpack_exports__ = {};
  /******/
  __webpack_modules__["./test/fixtures/webpack/v5/wxml/pages/index.js"]();
  /******/
  /******/
})();",
}
`;

exports[`webpack5 plugin mangle options with default mangleClassFilter: errors 1`] = `[]`;

exports[`webpack5 plugin mangle options with default mangleClassFilter: warnings 1`] = `[]`;

exports[`webpack5 plugin mangle options: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.cb {
    margin: -20px
}
.sa {
    margin: 20px
}
.qa {
    margin-left: auto;
    margin-right: auto
}
.b {
    margin-top: -0.5rem
}
.c {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.oa {
    height: 2.5rem
}
.p {
    height: 100px
}
.a {
    height: 200%
}
.ab {
    height: 99px
}
.i {
    max-height: 100px
}
.m {
    min-height: 100px
}
.pa {
    width: 2.5rem
}
.fa {
    width: 8rem
}
.q {
    width: 100px
}
.ra {
    width: 20px
}
.f {
    width: 300rpx
}
.za {
    width: 99px
}
.j {
    min-width: 300rpx
}
.n {
    max-width: 300rpx
}
.ba {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.r {
    align-items: center
}
.s {
    justify-content: center
}
.e>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.ca>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.da>view + view {
    border-style: solid
}
.ea>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.t {
    border-radius: 40px
}
.ga {
    border-radius: 0.375rem
}
.na {
    border-width: 0px
}
.x {
    border-width: 10px
}
.y {
    border-style: solid
}
.z {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.aa {
    --tw-border-opacity: 0.44
}
.u {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.ha {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.ta {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.v {
    --tw-bg-opacity: 0.54
}
.ya {
    background-image: url('https://xxx.com/xx.webp')
}
.bb {
    background-image: url('https://yyy.com/xx.webp')
}
.d {
    padding: 20px
}
.ua {
    padding-left: 1rem;
    padding-right: 1rem
}
.ia {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.k {
    font-size: 20px
}
.ja {
    font-weight: 600
}
.l {
    line-height: 0.9
}
.o {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.w {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.g {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.ka {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.h {
    --tw-text-opacity: 0.19
}
.la {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ma {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
@media (min-width: 640px) {
    .wa {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .xa {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="container">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered a">
    <text>{{powered.by}}</text>
  </view>
  <view class="b c d">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="e">
    <view class="f g h">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="i j k l">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="m n o">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="flex p q r s t u v w">
      Hello
    </view>
    <view class="x y z aa">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="grid ba ca da ea">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="fa ga ha ia ja ka la ma">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="na icon oa pa qa {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} ra {{flag=='p-[20px]'?'d':'sa'}}"></view>
  <button class="ta ua ia ka va wa xa">...</button>
  <view class="na icon oa pa qa {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} ra {{flag=='p-[20px]'?'d':'sa'}}"></view>
</view>",
  "wxml.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/(() => {
  // webpackBootstrap
  /******/
  var __webpack_modules__ = {
    /***/"./test/fixtures/webpack/v5/wxml/pages/index.js":
    /*!******************************************************!*\\
      !*** ./test/fixtures/webpack/v5/wxml/pages/index.js ***!
      \\******************************************************/
    /***/
    () => {
      eval("// import './index.wxml'\\n// import './index.css'\\n\\nconst className = \\"q p \\" + \\"ya\\";\\ndocument.body.append(\`<div class=\\"\${className}\\">className</div>\`);\\nconst el = document.createElement();\\nel.classList.add(\\"za\\", \`ab\`, \\"bb\\");\\ndocument.body.appendChild(el);\\n\\n//# sourceURL=webpack://weapp-tailwindcss-webpack-plugin/./test/fixtures/webpack/v5/wxml/pages/index.js?");

      /***/
    }

    /******/
  };
  /************************************************************************/
  /******/
  /******/ // startup
  /******/ // Load entry module and return exports
  /******/ // This entry module can't be inlined because the eval devtool is used.
  /******/
  var __webpack_exports__ = {};
  /******/
  __webpack_modules__["./test/fixtures/webpack/v5/wxml/pages/index.js"]();
  /******/
  /******/
})();",
}
`;

exports[`webpack5 plugin mangle options: errors 1`] = `[]`;

exports[`webpack5 plugin mangle options: warnings 1`] = `[]`;

exports[`webpack5 plugin mangle true: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.tw-cb {
    margin: -20px
}
.tw-sa {
    margin: 20px
}
.tw-qa {
    margin-left: auto;
    margin-right: auto
}
.tw-b {
    margin-top: -0.5rem
}
.tw-c {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.tw-oa {
    height: 2.5rem
}
.tw-p {
    height: 100px
}
.tw-a {
    height: 200%
}
.tw-ab {
    height: 99px
}
.tw-i {
    max-height: 100px
}
.tw-m {
    min-height: 100px
}
.tw-pa {
    width: 2.5rem
}
.tw-fa {
    width: 8rem
}
.tw-q {
    width: 100px
}
.tw-ra {
    width: 20px
}
.tw-f {
    width: 300rpx
}
.tw-za {
    width: 99px
}
.tw-j {
    min-width: 300rpx
}
.tw-n {
    max-width: 300rpx
}
.tw-ba {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.tw-r {
    align-items: center
}
.tw-s {
    justify-content: center
}
.tw-e>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.tw-ca>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.tw-da>view + view {
    border-style: solid
}
.tw-ea>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.tw-t {
    border-radius: 40px
}
.tw-ga {
    border-radius: 0.375rem
}
.tw-na {
    border-width: 0px
}
.tw-x {
    border-width: 10px
}
.tw-y {
    border-style: solid
}
.tw-z {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.tw-aa {
    --tw-border-opacity: 0.44
}
.tw-u {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.tw-ha {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.tw-ta {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.tw-v {
    --tw-bg-opacity: 0.54
}
.tw-ya {
    background-image: url('https://xxx.com/xx.webp')
}
.tw-bb {
    background-image: url('https://yyy.com/xx.webp')
}
.tw-d {
    padding: 20px
}
.tw-ua {
    padding-left: 1rem;
    padding-right: 1rem
}
.tw-ia {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.tw-k {
    font-size: 20px
}
.tw-ja {
    font-weight: 600
}
.tw-l {
    line-height: 0.9
}
.tw-o {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.tw-w {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.tw-g {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.tw-ka {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.tw-h {
    --tw-text-opacity: 0.19
}
.tw-la {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.tw-ma {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
@media (min-width: 640px) {
    .tw-wa {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .tw-xa {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="container">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered tw-a">
    <text>{{powered.by}}</text>
  </view>
  <view class="tw-b tw-c tw-d">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="tw-e">
    <view class="tw-f tw-g tw-h">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="tw-i tw-j tw-k tw-l">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="tw-m tw-n tw-o">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="flex tw-p tw-q tw-r tw-s tw-t tw-u tw-v tw-w">
      Hello
    </view>
    <view class="tw-x tw-y tw-z tw-aa">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="grid tw-ba tw-ca tw-da tw-ea">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="tw-fa tw-ga tw-ha tw-ia tw-ja tw-ka tw-la tw-ma">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="tw-na icon tw-oa tw-pa tw-qa {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} tw-ra {{flag=='p-[20px]'?'tw-d':'tw-sa'}}"></view>
  <button class="tw-ta tw-ua tw-ia tw-ka tw-va tw-wa tw-xa">...</button>
  <view class="tw-na icon tw-oa tw-pa tw-qa {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} tw-ra {{flag=='p-[20px]'?'tw-d':'tw-sa'}}"></view>
</view>",
  "wxml.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/(() => {
  // webpackBootstrap
  /******/
  var __webpack_modules__ = {
    /***/"./test/fixtures/webpack/v5/wxml/pages/index.js":
    /*!******************************************************!*\\
      !*** ./test/fixtures/webpack/v5/wxml/pages/index.js ***!
      \\******************************************************/
    /***/
    () => {
      eval("// import './index.wxml'\\n// import './index.css'\\n\\nconst className = \\"tw-q tw-p \\" + \\"tw-ya\\";\\ndocument.body.append(\`<div class=\\"\${className}\\">className</div>\`);\\nconst el = document.createElement();\\nel.classList.add(\\"tw-za\\", \`tw-ab\`, \\"tw-bb\\");\\ndocument.body.appendChild(el);\\n\\n//# sourceURL=webpack://weapp-tailwindcss-webpack-plugin/./test/fixtures/webpack/v5/wxml/pages/index.js?");

      /***/
    }

    /******/
  };
  /************************************************************************/
  /******/
  /******/ // startup
  /******/ // Load entry module and return exports
  /******/ // This entry module can't be inlined because the eval devtool is used.
  /******/
  var __webpack_exports__ = {};
  /******/
  __webpack_modules__["./test/fixtures/webpack/v5/wxml/pages/index.js"]();
  /******/
  /******/
})();",
}
`;

exports[`webpack5 plugin mangle true: errors 1`] = `[]`;

exports[`webpack5 plugin mangle true: warnings 1`] = `[]`;

exports[`webpack5 plugin multiple tailwindcss contexts raw case 0: assets 1`] = `
{
  "index.css": ".bg-\\[url\\(\\'src\\/index\\.js\\'\\)\\] {
    background-image: url('src/index.js')
}
.bg-\\[url\\(\\'src\\/index\\.wxml\\'\\)\\] {
    background-image: url('src/index.wxml')
}

/* .a {
  color: red;
} */
",
  "index.js": "(()=>{var r={617:r=>{r.exports=" "}},e={};function o(t){var n=e[t];if(void 0!==n)return n.exports;var s=e[t]={exports:{}};return r[t](s,s.exports,o),s.exports}o.n=r=>{var e=r&&r.__esModule?()=>r.default:()=>r;return o.d(e,{a:e}),e},o.d=(r,e)=>{for(var t in e)o.o(e,t)&&!o.o(r,t)&&Object.defineProperty(r,t,{enumerable:!0,get:e[t]})},o.o=(r,e)=>Object.prototype.hasOwnProperty.call(r,e),(()=>{"use strict";o(617),console.log("bg-[url('src/index.js')]")})()})();",
  "module.css": ".bg-\\[url\\(\\'src\\/module\\/index\\.js\\'\\)\\] {
    background-image: url('src/module/index.js')
}
.bg-\\[url\\(\\'src\\/module\\/index\\.wxml\\'\\)\\] {
    background-image: url('src/module/index.wxml')
}

/* .b {
  color: blue;
} */
",
  "module.js": "(()=>{var e={731:e=>{e.exports=" "}},r={};function o(t){var n=r[t];if(void 0!==n)return n.exports;var s=r[t]={exports:{}};return e[t](s,s.exports,o),s.exports}o.n=e=>{var r=e&&e.__esModule?()=>e.default:()=>e;return o.d(r,{a:r}),r},o.d=(e,r)=>{for(var t in r)o.o(r,t)&&!o.o(e,t)&&Object.defineProperty(e,t,{enumerable:!0,get:r[t]})},o.o=(e,r)=>Object.prototype.hasOwnProperty.call(e,r),(()=>{"use strict";o(731),console.log("bg-[url('src/module/index.js')]")})()})();",
}
`;

exports[`webpack5 plugin multiple tailwindcss contexts raw case 0: errors 1`] = `[]`;

exports[`webpack5 plugin multiple tailwindcss contexts raw case 0: warnings 1`] = `[]`;

exports[`webpack5 plugin multiple tailwindcss contexts: assets 1`] = `
{
  "index.css": "@tailwind utilities;

/* .a {
  color: red;
} */

",
  "index.js": "(()=>{"use strict";console.log("bg-[url('src/index.js')]")})();",
  "module.css": "@tailwind utilities;

/* .b {
  color: blue;
} */

",
  "module.js": "(()=>{"use strict";console.log("bg-[url('src/module/index.js')]")})();",
}
`;

exports[`webpack5 plugin multiple tailwindcss contexts: errors 1`] = `[]`;

exports[`webpack5 plugin multiple tailwindcss contexts: warnings 1`] = `[]`;

exports[`webpack5 plugin unified common: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.-m-_20px_ {
    margin: -20px
}
.m-_20px_ {
    margin: 20px
}
.mx-auto {
    margin-left: auto;
    margin-right: auto
}
.-mt-2 {
    margin-top: -0.5rem
}
.mb-_-20px_ {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.h-10 {
    height: 2.5rem
}
.h-_100px_ {
    height: 100px
}
.h-_200p_ {
    height: 200%
}
.h-_99px_ {
    height: 99px
}
.max-h-_100px_ {
    max-height: 100px
}
.min-h-_100px_ {
    min-height: 100px
}
.w-10 {
    width: 2.5rem
}
.w-32 {
    width: 8rem
}
.w-_100px_ {
    width: 100px
}
.w-_20px_ {
    width: 20px
}
.w-_300rpx_ {
    width: 300rpx
}
.w-_99px_ {
    width: 99px
}
.min-w-_300rpx_ {
    min-width: 300rpx
}
.max-w-_300rpx_ {
    max-width: 300rpx
}
.grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.items-center {
    align-items: center
}
.justify-center {
    justify-content: center
}
.space-y-_1d6rem_>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.divide-x-_10px_>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.divide-solid>view + view {
    border-style: solid
}
.divide-_h010101_>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.rounded-_40px_ {
    border-radius: 40px
}
.rounded-md {
    border-radius: 0.375rem
}
.border-0 {
    border-width: 0px
}
.border-_10px_ {
    border-width: 10px
}
.border-solid {
    border-style: solid
}
.border-_h098765_ {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.border-opacity-_0d44_ {
    --tw-border-opacity: 0.44
}
.bg-_h123456_ {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.bg-pink-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.bg-sky-700 {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.bg-opacity-_0d54_ {
    --tw-bg-opacity: 0.54
}
.bg-_url_qhttpscssxxxdcomsxxdwebpq__ {
    background-image: url('https://xxx.com/xx.webp')
}
.bg-_url_qhttpscssyyydcomsxxdwebpq__ {
    background-image: url('https://yyy.com/xx.webp')
}
.p-_20px_ {
    padding: 20px
}
.px-4 {
    padding-left: 1rem;
    padding-right: 1rem
}
.py-2 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.text-_20px_ {
    font-size: 20px
}
.font-semibold {
    font-weight: 600
}
.leading-_0d9_ {
    line-height: 0.9
}
.text-_hdddddd_ {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.text-_hffffff_ {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-black {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-opacity-_0d19_ {
    --tw-text-opacity: 0.19
}
.ring-4 {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ring-pink-300 {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
@media (min-width: 640px) {
    .smcpx-8 {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .smcpy-3 {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="container">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered h-_200p_">
    <text>{{powered.by}}</text>
  </view>
  <view class="-mt-2 mb-_-20px_ p-_20px_">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="space-y-_1d6rem_">
    <view class="w-_300rpx_ text-black text-opacity-_0d19_">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="max-h-_100px_ min-w-_300rpx_ text-_20px_ leading-_0d9_">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="min-h-_100px_ max-w-_300rpx_ text-_hdddddd_">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="flex h-_100px_ w-_100px_ items-center justify-center rounded-_40px_ bg-_h123456_ bg-opacity-_0d54_ text-_hffffff_">
      Hello
    </view>
    <view class="border-_10px_ border-solid border-_h098765_ border-opacity-_0d44_">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="grid grid-cols-3 divide-x-_10px_ divide-solid divide-_h010101_">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="w-32 rounded-md bg-pink-500 py-2 font-semibold text-white ring-4 ring-pink-300">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-_20px_ {{flag=='p-[20px]'?'p-_20px_':'m-_20px_'}}"></view>
  <button class="bg-sky-700 px-4 py-2 text-white hovercbg-sky-800 smcpx-8 smcpy-3">...</button>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-_20px_ {{flag=='p-[20px]'?'p-_20px_':'m-_20px_'}}"></view>
</view>",
  "wxml.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/(() => {
  // webpackBootstrap
  /******/
  var __webpack_modules__ = {
    /***/"./test/fixtures/webpack/v5/wxml/pages/index.js":
    /*!******************************************************!*\\
      !*** ./test/fixtures/webpack/v5/wxml/pages/index.js ***!
      \\******************************************************/
    /***/
    () => {
      eval("// import './index.wxml'\\n// import './index.css'\\n\\nconst className = \\"w-_100px_ h-_100px_ \\" + \\"bg-_url_qhttpscssxxxdcomsxxdwebpq__\\";\\ndocument.body.append(\`<div class=\\"\${className}\\">className</div>\`);\\nconst el = document.createElement();\\nel.classList.add(\\"w-_99px_\\", \`h-_99px_\`, \\"bg-_url_qhttpscssyyydcomsxxdwebpq__\\");\\ndocument.body.appendChild(el);\\n\\n//# sourceURL=webpack://weapp-tailwindcss-webpack-plugin/./test/fixtures/webpack/v5/wxml/pages/index.js?");

      /***/
    }

    /******/
  };
  /************************************************************************/
  /******/
  /******/ // startup
  /******/ // Load entry module and return exports
  /******/ // This entry module can't be inlined because the eval devtool is used.
  /******/
  var __webpack_exports__ = {};
  /******/
  __webpack_modules__["./test/fixtures/webpack/v5/wxml/pages/index.js"]();
  /******/
  /******/
})();",
}
`;

exports[`webpack5 plugin unified common: errors 1`] = `[]`;

exports[`webpack5 plugin unified common: warnings 1`] = `[]`;

exports[`webpack5 plugin unified prod common: assets 1`] = `
{
  "index.css": "::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.-m-_20px_ {
    margin: -20px
}
.m-_20px_ {
    margin: 20px
}
.mx-auto {
    margin-left: auto;
    margin-right: auto
}
.-mt-2 {
    margin-top: -0.5rem
}
.mb-_-20px_ {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.h-10 {
    height: 2.5rem
}
.h-_100px_ {
    height: 100px
}
.h-_200p_ {
    height: 200%
}
.h-_99px_ {
    height: 99px
}
.max-h-_100px_ {
    max-height: 100px
}
.min-h-_100px_ {
    min-height: 100px
}
.w-10 {
    width: 2.5rem
}
.w-32 {
    width: 8rem
}
.w-_100px_ {
    width: 100px
}
.w-_20px_ {
    width: 20px
}
.w-_300rpx_ {
    width: 300rpx
}
.w-_99px_ {
    width: 99px
}
.min-w-_300rpx_ {
    min-width: 300rpx
}
.max-w-_300rpx_ {
    max-width: 300rpx
}
.grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.items-center {
    align-items: center
}
.justify-center {
    justify-content: center
}
.space-y-_1d6rem_>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.6rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.6rem * var(--tw-space-y-reverse))
}
.divide-x-_10px_>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.divide-solid>view + view {
    border-style: solid
}
.divide-_h010101_>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.rounded-_40px_ {
    border-radius: 40px
}
.rounded-md {
    border-radius: 0.375rem
}
.border-0 {
    border-width: 0px
}
.border-_10px_ {
    border-width: 10px
}
.border-solid {
    border-style: solid
}
.border-_h098765_ {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.border-opacity-_0d44_ {
    --tw-border-opacity: 0.44
}
.bg-_h123456_ {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.bg-pink-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.bg-sky-700 {
    --tw-bg-opacity: 1;
    background-color: rgb(3 105 161 / var(--tw-bg-opacity))
}
.bg-opacity-_0d54_ {
    --tw-bg-opacity: 0.54
}
.bg-_url_qhttpscssxxxdcomsxxdwebpq__ {
    background-image: url('https://xxx.com/xx.webp')
}
.bg-_url_qhttpscssyyydcomsxxdwebpq__ {
    background-image: url('https://yyy.com/xx.webp')
}
.p-_20px_ {
    padding: 20px
}
.px-4 {
    padding-left: 1rem;
    padding-right: 1rem
}
.py-2 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem
}
.text-_20px_ {
    font-size: 20px
}
.font-semibold {
    font-weight: 600
}
.leading-_0d9_ {
    line-height: 0.9
}
.text-_hdddddd_ {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.text-_hffffff_ {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-black {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-opacity-_0d19_ {
    --tw-text-opacity: 0.19
}
.ring-4 {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ring-pink-300 {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
@media (min-width: 640px) {
    .smcpx-8 {
        padding-left: 2rem;
        padding-right: 2rem
    }
    .smcpy-3 {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem
    }
}",
  "index.wxml": "<!-- index.wxml -->
<import src="../../wxml/motto/motto.wxml" />
<view class="container">
  <view bindtap="bindViewTap">
    <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
  </view>
  <view class="motto">
    <template is="motto" data="{{motto:motto}}" />
  </view>
  <view class="powered h-_200p_">
    <text>{{powered.by}}</text>
  </view>
  <view class="-mt-2 mb-_-20px_ p-_20px_">
    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
  </view>
  <view class="space-y-_1d6rem_">
    <view class="w-_300rpx_ text-black text-opacity-_0d19_">
      w-[300rpx] text-black text-opacity-[0.19]
    </view>
    <view class="max-h-_100px_ min-w-_300rpx_ text-_20px_ leading-_0d9_">
      min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
    </view>
    <view class="min-h-_100px_ max-w-_300rpx_ text-_hdddddd_">
      max-w-[300rpx] min-h-[100px] text-[#dddddd]
    </view>
    <view class="flex h-_100px_ w-_100px_ items-center justify-center rounded-_40px_ bg-_h123456_ bg-opacity-_0d54_ text-_hffffff_">
      Hello
    </view>
    <view class="border-_10px_ border-solid border-_h098765_ border-opacity-_0d44_">
      border-[10px] border-[#098765] border-solid border-opacity-[0.44]
    </view>
    <view class="grid grid-cols-3 divide-x-_10px_ divide-solid divide-_h010101_">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </view>
    <view class="w-32 rounded-md bg-pink-500 py-2 font-semibold text-white ring-4 ring-pink-300">
      Default
    </view>
  </view>
  <view class="test">test</view>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-_20px_ {{flag=='p-[20px]'?'p-_20px_':'m-_20px_'}}"></view>
  <button class="bg-sky-700 px-4 py-2 text-white hovercbg-sky-800 smcpx-8 smcpy-3">...</button>
  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-_20px_ {{flag=='p-[20px]'?'p-_20px_':'m-_20px_'}}"></view>
</view>",
  "wxml.js": "(() => {
  document.body.append("<div class=\\"w-_100px_ h-_100px_ bg-_url_qhttpscssxxxdcomsxxdwebpq__\\">className</div>");
  const d = document.createElement();
  d.classList.add("w-_99px_", "h-_99px_", "bg-_url_qhttpscssyyydcomsxxdwebpq__"), document.body.appendChild(d);
})();",
}
`;

exports[`webpack5 plugin unified prod common: errors 1`] = `[]`;

exports[`webpack5 plugin unified prod common: warnings 1`] = `[]`;
